0.0.10
Added: Blaze/End rods are now tool rods
Added: Spoon upgrade, allows pickaxes to work as shovels
Added: Red card upgrade, allows items to break permanently (could be useful in machines that use tools...)
Added: Root advancement gives players some blueprints
Added: More JEI example recipes (applying tip upgrades, for instance)
Fixed: Crafting station now works with the '+' (move items) button in JEI

0.0.9
Added: Katanas
Added: Machetes
Added: Excavators (AOE shovels)
Fixed: Crafting station losing inventory when broken (#2)

0.0.8
Added: Missing textures and models
Changed: Dried sinew is now a smelting recipe
Fixed: Some armor items not being colored

0.0.7 (preview 7, 1.12.2)
Added: New main parts: obsidian, netherrack, and terracotta
Added: Config to specify items that work with block-placing tools. Default list includes dank/null and a couple other items.
Changed: Improvements to how gear part data is passed around, which seems to improve frame rate (FPS)
Changed: Gear can no longer be repaired with lower-tier materials
Changed: Un-nerfed vanilla hoes. You're welcome.
Fixed: Materials not considering grade when displaying stats
Fixed: Armor durability being silly (added "armor durability" stat to correct this)
Fixed: Armor breaking permanently (hopefully)
Fixed: A rare(?) crash with hammers
Fixed: JEI should now recognize the crafting station as a crafting table

0.0.6 (preview 6, 1.12.2)
Added: Part analyzer, basically the same as the material grade from Silent's Gems
Added: Tools and armor that have ungraded parts will be assigned random grades. The grades selected have a lower average and lower maximum than those graded by the analyzer.
Changed: The lowest material grades now reduce stats slightly, with grade C providing no bonuses. Higher grade bonuses increased.

0.0.5 (preview 5, 1.12.2)
Added: Blueprints/templates now display an outline of the item they craft if you are holding shift
Added: Template textures